# ISRO-BAH-IISERK

./: .gitignore  AGENTS.md  PROJECT_MAP.md  README.md  STAGE3.md  hel1os_2026Jun22T091248290.sh  main.py  pyproject.toml  run_v2.sh  solexs.sh
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/catalogs/: goes_flare_catalog.csv
data/downloads/: bulk_dl.py  bulk_dl_browser.py  bulk_download.sh  concat_orbits.py  cookie_grabber.py  decompress.sh  download_hel1os.sh  download_manager.sh  download_solexs.sh  fast_dl.py  fetch_all_data.sh  parallel_dl.sh  recover_corrupted.py
docs/: IMPLEMENTED.md  PLAN.md  RESULTS.md  ppt_prompts.md
docs/analysis/: 01_data_exploration.md  02_nowcasting_pipeline.md  03_forecasting_pipeline.md  04_visualization_dashboard.md  06_deep_analysis.md  README.md  combined_coverage.md  hel1os_inventory.md  notes_hel1os.md  notes_solexs.md  solexs_inventory.md
docs/ppt_prompts/: 01_pipeline_overview.md  02_novelty_innovation.md  03_feature_extraction.md  04_model_architecture.md  05_causal_network.md  06_results_performance.md
docs/research/01_physics/: README.md
docs/research/02_ml_forecasting/: README.md
docs/research/03_aditya_l1/: README.md
docs/research/04_hard_xray/: README.md
docs/research/05_novel_gaps/: README.md
pipeline/: README.md  pyproject.toml  run_all.py  setup_data.sh
pipeline/data/: raw
pipeline/data/processed/: master_dataset_20260623.npz  stage1_20260623.npz
pipeline/docs/: SoLEXS_HEL1OS_Flare_Feature_Reference.md  feature_importance_by_category.md  stage2_feature_engineering.md  stages_0_and_1_complete.md
pipeline/src/: goes_utils.py  stage1_preprocessing.py
pipeline/src/stage2/: correlation_analysis.py  phase10_extended.py  phase1_direct.py  phase2_perflare.py  phase3_tem_goes.py  phase4_tem_solexs.py  phase5_wavelet.py  phase6_spectral.py  phase7_nonlinear.py  phase8_event.py  phase9_assemble.py
scripts/: run_all.py
src/bah2026/: __init__.py  config.py  main.py
src/bah2026/data/: __init__.py  calibration.py  corrections.py  ground_truth.py  hdf5_builder.py  hel1os_concat.py  preprocessing.py  reader.py  sequence_builder.py
src/bah2026/features/: __init__.py  advanced_features.py  causal_network.py  engineering.py  gpu_features.py  information_theory.py  interpretation.py  non_thermal.py  qpp.py  response_convolution.py  spectral_fitting.py
src/bah2026/models/: __init__.py  adaptive_detection.py  cnn_lstm_v3.py  forecasting.py  mae_pretrain.py  nowcasting.py  transformer.py
src/bah2026/scripts/: __init__.py  analysis_deep.py  analyze_unused_data.py  audit_data_usage.py  build_goes_catalog.py  build_sequences.py  extract_aux_files.py  generate_master_csv.py  gpu_extract_all.py  gpu_extract_parallel.py  gpu_extract_sequential.py  investigate_czt2.py  investigate_detection_failures.py  run_full_pipeline.py  run_master_pipeline.py  run_pipeline.py  run_v3_pipeline.py  verify_pipeline.py
src/bah2026/visualization/: __init__.py  dashboard.py  plots.py
tests/: test_config.py  test_corrections.py  test_data.py  test_feature_coverage.py  test_features.py  test_models.py  test_non_thermal.py  test_qpp.py  test_readers.py  test_response_convolution.py
