[project]
name = "isro-bah-iiserk"
version = "0.1.0"
description = "BAH 2026 — Challenge 15: Solar Flare Forecasting/Nowcasting using Aditya-L1 SoLEXS & HEL1OS data"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "h5py>=3.11",
    "netCDF4>=1.7",
    "astropy>=6.0",
    "scikit-learn>=1.5",
    "torch>=2.3",
    "tqdm>=4.66",
    "requests>=2.34.2",
    "websockets>=16.0",
    "playwright>=1.60.0",
    "lightgbm>=4.3",
    "xgboost>=2.1",
    "catboost>=1.2",
    "streamlit>=1.37",
    "plotly>=5.24",
    "PyWavelets>=1.7",
    "seaborn>=0.13",
]

[project.scripts]
bah2026 = "bah2026.main:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
