[project]
name = "isro-bah-iiserk"
version = "0.2.0"
description = "BAH 2026 — Challenge 15: Solar Flare Forecasting/Nowcasting using Aditya-L1 SoLEXS & HEL1OS data"
requires-python = ">=3.13"
authors = [
    {name = "IISER Kolkata Team", email = "sbs22ms076@iiserkol.ac.in"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3.13",
]
keywords = ["solar-flares", "aditya-l1", "solexs", "hel1os", "space-weather", "machine-learning"]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "h5py>=3.11",
    "netCDF4>=1.7",
    "astropy>=6.0",
    "scikit-learn>=1.5",
    "torch>=2.3",
    "tqdm>=4.66",
    "requests>=2.34.2",
    "websockets>=16.0",
    "playwright>=1.60.0",

    "streamlit>=1.37",
    "plotly>=5.24",
    "PyWavelets>=1.7",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
viz = ["streamlit>=1.37", "plotly>=5.24"]
gpu = ["torch>=2.3"]
all = ["sunpy[all]>=6.0", "cdflib>=1.3"]

[project.scripts]
bah2026 = "bah2026.main:main"
bah2026-run-pipeline = "bah2026.scripts.run_pipeline:main"
bah2026-full-pipeline = "bah2026.scripts.run_full_pipeline:main"
bah2026-concat-hel1os = "bah2026.data.hel1os_concat:main"
bah2026-analyze = "bah2026.scripts.analyze_unused_data:main"
bah2026-extract-aux = "bah2026.scripts.extract_aux_files:main"
bah2026-build-goes = "bah2026.scripts.build_goes_catalog:main"

[project.urls]
Repository = "https://github.com/Shuvam-Banerji-Seal/ISRO-BAH-IISERK"
Documentation = "https://github.com/Shuvam-Banerji-Seal/ISRO-BAH-IISERK/tree/main/docs"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
